rec script was modified

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,8 @@
                     </div>
         
                     <div class="confirm_button_container">
-                        <button class="confirm_button">Получить рекомендации</button>
+                        <button class="confirm_button rec_button">Получить рекомендации</button>
+                        <button class="clear_button rec_button">Скрыть рекомендации</button>
                     </div>
 
                 </form>
