Rec script amended

--- a/src/index.html
+++ b/src/index.html
@@ -179,8 +179,8 @@
             <section class="recommendations_block">
                 <h2>Рекомендации</h2>
                 <div class="recommendations_intro">
-                    <p>Если вы планируете поедку в Суздаль, мы сформируем для вас список из трёх самых главных мест в зависимости от ваших предпочтений.</p>
-                    <p>Укажите, какие направления наиболее интересны для вас.</p>
+                    <p class="rec_intro_1">Если вы планируете поедку в Суздаль, мы сформируем для вас список из трёх самых главных мест в зависимости от ваших предпочтений.</p>
+                    <p class="rec_intro_2">Укажите, какие направления наиболее интересны для вас.</p>
                 </div>
                 <form class="ask_recommendation">
                     <div class="radio_container">
