BD script added

--- a/src/index.html
+++ b/src/index.html
@@ -229,24 +229,28 @@
                 <div class="bd_slider_container">
 
                     <div class="bd_slider_text">
-                        <img>
-                        <p> Сдвиньте ползунок влево, чтобы узнать больше </p>
+                        <div class="bd_arrow_container">
+                            <img src="img/double_arrow.png" alt="double_arrow">
+                        </div>
+                        <div class="bd_arrow_text">
+                            <p> Сдвиньте ползунок влево, чтобы узнать больше </p>
+                        </div>
                     </div>
                     
                     <div class="bd_slider_block">
-                        <div class="bd_slider_window">
-                            <div class="bd_slider_tape">
-                                <div class="bd_slider_handle">
-
+                        <div class="slider_wrapper">
+                            <div class="bd_slider_window">
+                                <div class="bd_slider_tape">
+                                    <div class="bd_slider_handle"></div>
+                                    <div class="bd_slider_date"> 1024</div>
                                 </div>
-                                <div class="bd_slider_date"> 1024</div>
                             </div>
-                        </div>
                     </div>
+                </div>
                 </div>
 
                 <div class="bd_counter_container">
-                    COUNTER
+                    <p>COUNTER</p>
                 </div>
 
                 <div class="bd_info_container">
